# npuemulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  tests.yml
.github/workflows/: CI.yml  main.yml  tests.yml
benchmarks/: Conv2DBenchmarks.cpp  DenseBenchmarks.cpp  FCBenchmarks.cpp  MatmulBenchmarks.cpp  MaxPool2DBenchmarks.cpp  ReLuBenchmarks.cpp  VGG16Benchmarks.cpp
include/: Conv2D.h  Dense.h  Errors.h  Memory.h  ReLu.h  Threads.h
internal/: Conv2D.h  FullyConnected.h  Matmul.h  MaxPool2D.h  ReLu.h  Threads.h  Types.h
src/: Conv2D.cpp  Dense.cpp  Errors.cpp  FullyConnected.cpp  Matmul.cpp  MatmulMicrokernel.asm  MaxPool2D.cpp  Memory.cpp  ReLu.cpp  Threads.cpp  Types.cpp  macros.inc  mtrx_mul.asm
src/unix/: MatmulMicrokernel.asm
src/win/: MatmulMicrokernel.asm
tests/: Conv2DTest.py  Conv2DTests.cpp  DenseTests.cpp  FCTests.cpp  MatmulTests.cpp  OSTests.cpp  ReLuTests.cpp
